--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -49,6 +49,16 @@ body {
     width: 100%;
   }
 }
-main {
+.Content {
   grid-area: main;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  width: 100%;
+  margin: 1em auto;
+  > div {
+    width: 100%;
+    height: 100%;
+  }
 }
